--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 <body>
+    <div id="g_id_onload" 
+        data-client_id="1072523115860-pi871022ohoipedb2i6ugbgml7ak82r4.apps.googleusercontent.com" 
+        data-login_uri="https://alvinzhu33.github.io/igScrambler/index.html"
+        data-auto_prompt="false">
+    </div>
+    <div class="g_id_signin" 
+        data-type="standard" 
+        data-size="large" 
+        data-theme="outline" 
+        data-text="sign_in_with"
+        data-shape="rectangular" 
+        data-logo_alignment="left">
+    </div>
+
     <div id="app">
         <input type="text" v-model="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags">
         <p v-for="word in splitGeneral">{{ word }}</p>
@@ -19,6 +33,7 @@
         <button v-if="show" v-on:click="copy">COPY SCRAMBLE</button>
     </div>
 
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
         var app = new Vue({
             el: '#app',
