--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         data-logo_alignment="left">
     </div> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
 
     <div id="app">
         <input type="text" v-model="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags">
@@ -38,6 +39,11 @@
 
     <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
     <script>
+        var signedIn = false
+        if (auth2.isSignedIn.get()){
+            signedIn = true
+        }
+
         var app = new Vue({
             el: '#app',
             data: {
@@ -47,7 +53,8 @@
                 splitSpecific: [],
                 scrambledSplit: [],
                 scrambledMessage: "",
-                show: false
+                show: false,
+                vSignedIn: signedIn
             },
             methods: {
                 splice: function(event, num){
@@ -92,9 +99,16 @@
         function onSignIn(googleUser) {
             var profile = googleUser.getBasicProfile();
             console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-            console.log('Name: ' + profile.getName());
-            console.log('Image URL: ' + profile.getImageUrl());
-            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+            // console.log('Name: ' + profile.getName());
+            // console.log('Image URL: ' + profile.getImageUrl());
+            // console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+            signedIn = true
+        }
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
         }
     </script>
 </body>
