--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 scrambledSplit: [],
                 scrambledMessage: "",
                 show: false,
-                vSignedIn: signedIn
+                // vSignedIn: signedIn
             },
             methods: {
                 splice: function(event, num){
