--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             // console.log('Image URL: ' + profile.getImageUrl());
             // console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
             document.getElementById("signOut").style.display = "block"
+            document.getElementById("saveButton").style.display = "block"
         }
         function signOut() {
             var auth2 = gapi.auth2.getAuthInstance();
@@ -93,6 +94,7 @@
                 console.log('User signed out.');
             });
             document.getElementById("signOut").style.display = "none"
+            document.getElementById("saveButton").style.display = "none"
         }
         function saveHashtags() {
             var auth2 = gapi.auth2.getAuthInstance();
@@ -105,6 +107,7 @@
 
         let authInit = gapi.auth2.getAuthInstance();
         if (auth2.isSignedIn.get()){
+            document.getElementById("signOut").style.display = "block"
             document.getElementById("saveButton").style.display = "block"
         }
     </script>
