--- a/index.html
+++ b/index.html
@@ -45,8 +45,24 @@
         <button id="saveButton" style="display:none" onclick="saveHashtags();">Save</button>
     </div>
 
-    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
     <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyABJOM98XcFE_Wk-Z7H24AFQXNm3_ovf4g",
+            authDomain: "igscramble.firebaseapp.com",
+            projectId: "igscramble",
+            storageBucket: "igscramble.appspot.com",
+            messagingSenderId: "1072523115860",
+            appId: "1:1072523115860:web:65299d76f9840b87c8dcc1",
+            measurementId: "G-MS73B36M6X"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
         var app = new Vue({
             el: '#app',
             data: {
@@ -106,9 +122,11 @@
             }
         })
 
+        var userId;
+
         function onSignIn(googleUser) {
             var profile = googleUser.getBasicProfile();
-            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            userId = profile.getId()
             // console.log('Name: ' + profile.getName());
             // console.log('Image URL: ' + profile.getImageUrl());
             // console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
@@ -126,7 +144,13 @@
         function saveHashtags() {
             var auth2 = gapi.auth2.getAuthInstance();
             if (auth2.isSignedIn.get()){
-                console.log("SAVE THIS")
+                let gen = document.getElementById("genHashtags").value.split(" ")
+                let spec = document.getElementById("specHashtags").value.split(" ")
+                console.log(gen, spec)
+                firebase.database().ref(userId).set({
+                    gen: gen,
+                    spec: spec
+                })
             } else {
                 console.log("SIGN IN FIRST")
             }
@@ -134,6 +158,7 @@
 
         // let authInit = gapi.auth2.getAuthInstance();
         if (auth2.isSignedIn.get()){
+            userId = auth2.currentUser.get().getBasicProfile().getId()
             document.getElementById("signOut").style.display = "block"
             document.getElementById("saveButton").style.display = "block"
         }
