--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
             <label for="genHashtags" class="form-label">General Hashtags</label>
             <input id="genHashtags" type="text" v-model="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags" class="form-control">
             <div class='hashtagDisplay'>
-                <div v-for="wordIndex in splitGeneral.length" class="hashtags" :style="{ 'background-color' : colorsGeneral[(wordIndex-1)%3]}">
-                    <a :href="'https://www.instagram.com/explore/tags/' + splitGeneral[wordIndex-1].substring(1)">{{ splitGeneral[wordIndex-1] }}</a>
-                </div>
+                <a v-for="wordIndex in splitGeneral.length" class="hashtags" :style="{ 'background-color' : colorsGeneral[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitGeneral[wordIndex-1]">
+                    #{{ splitGeneral[wordIndex-1] }}
+                </a>
             </div>
         </div>
         <div class="hashtagInput mb-3">
             <label for="specHashtags" class="form-label">Specific Hashtags</label>
             <input id="specHashtags" type="text" v-model="messageSpecific" v-on:keyup="splice($event, 2)" placeholder="Post-specific hashtags" class="form-control">
             <div class='hashtagDisplay'>
-                <div v-for="wordIndex in splitSpecific.length" class="hashtags" :style="{ 'background-color' : colorsSpecific[(wordIndex-1)%3]}">
-                    <a :href="'https://www.instagram.com/explore/tags/' + splitSpecific[wordIndex-1].substring(1)">{{ splitSpecific[wordIndex-1] }}</a>
-                </div>
+                <a v-for="wordIndex in splitSpecific.length" class="hashtags" :style="{ 'background-color' : colorsSpecific[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitSpecific[wordIndex-1]">
+                    #{{ splitSpecific[wordIndex-1] }}
+                </a>
             </div>
         </div>
 
@@ -83,8 +83,8 @@
                 scrambledSplit: [],
                 scrambledMessage: "",
                 show: false,
-                colorsGeneral: (["#96E8BC", "#B6F9C9", "#C9FFE2"]).sort(() => Math.random() - 0.5),
-                colorsSpecific: (["#0a369d", "#4472ca", "#5e7ce2"]).sort(() => Math.random() - 0.5),
+                colorsGeneral: (["#96E8BC80", "#B6F9C980", "#C9FFE280"]).sort(() => Math.random() - 0.5),
+                colorsSpecific: (["#0a369d80", "#4472ca80", "#5e7ce280"]).sort(() => Math.random() - 0.5),
             },
             methods: {
                 splice: function(event, num){
@@ -93,7 +93,7 @@
                             this.splitGeneral = []
                             var splitWords = this.messageGeneral.split(' ')
                             for (var i = 0; i < splitWords.length; i++){
-                                this.splitGeneral.push('#' + splitWords[i] + ' ')
+                                this.splitGeneral.push(splitWords[i] + ' ')
                             }
                             this.lengthGeneral = splitWords.length
                         } else {
@@ -105,7 +105,7 @@
                             this.splitSpecific = []
                             var splitWords = this.messageSpecific.split(' ')
                             for (var i = 0; i < splitWords.length; i++) {
-                                this.splitSpecific.push('#' + splitWords[i] + ' ')
+                                this.splitSpecific.push(splitWords[i] + ' ')
                             }
                             this.lengthSpecific = splitWords.length
                         } else {
