--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <button id="signOutButton" style="display: none;" onclick="signOut()">
         Sign out
     </button>
-    <button id="loadButton" style="display: none;" onclick="load()">
-        Load saved words
+    <button id="loadButton" style="display: none;" onclick="loadWords()">
+        Load Saved Words
     </button>
 
     <div id="app">
@@ -54,7 +54,7 @@
         </div>
         <button v-if="show" v-on:click="copy">COPY SCRAMBLE</button>
 
-        <button id="saveButton" style="display:none" onclick="saveHashtags();">Save</button>
+        <button v-if="splitGeneral.length >0 || splitSpecific.length > 0" id="saveButton" style="display:none" onclick="saveHashtags();">Save</button>
     </div>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -183,6 +183,20 @@
             document.getElementById("signOutButton").style.display = "none"
             document.getElementById("saveButon").style.display = "none"
             document.getElementById("loadButton").style.display = "none"
+        }
+
+        function loadWords() {
+            genHash = document.getElementById('genHashtags')
+            genHash.setAttribute('value', )
+            var auth2 = gapi.auth2.getAuthInstance();
+            if (auth2.isSignedIn.get()) {
+                firebase.database().ref(userId).on('value', function(snapshot){
+                    document.getElementById("genHashtags").value = snapshot.val().gen
+                    document.getElementById("specHashtags").value = snapshot.val().spec
+                })
+            } else {
+                console.log("SIGN IN FIRST")
+            }
         }
     </script>
 </body>
