onclick to v-on

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button id="signOutButton" style="display: none;" onclick="signOut()">
         Sign out
     </button>
-    <button id="loadButton" style="display: none;" v-on:click="loadWords()">
+    <button id="loadButton" style="display: none;" v-on:click="loadWords">
         Load Saved Words
     </button>
 
