--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                     //     document.getElementById("genHashtags").value = snapshot.val().gen
                     //     document.getElementById("specHashtags").value = snapshot.val().spec
                     // })
+                    inputEle = document.createElement('input')
+                    inputEle.setAttribute('value', "HELLO")
+                    document.body.append(inputEle)
                 }
             }
         })
