--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
                     // inputEle = document.createElement('input')
                     // inputEle.setAttribute('value', "HELLO")
                     // document.body.append(inputEle)
+                    this.splice(event, 1)
+                    this.splice(event, 2)
                 }
             }
         })
