--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             },
             methods: {
                 splice: function(event, num){
+                    console.log("hit")
                     if (num == 1){
                         if (this.messageGeneral.length > 0){
                             this.splitGeneral = []
