--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                     // inputEle.setAttribute('value', "HELLO")
                     // document.body.append(inputEle)
                     this.splice(event, 1)
+                    console.log("hello2")
                     this.splice(event, 2)
                 }
             }
