--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
                         document.getElementById("specHashtags").value = snapshot.val().spec
                         this.messageGeneral = snapshot.val().gen
                         this.messageSpecific = snapshot.val().spec
-                        console.log(this.messageGeneral)
+                        // console.log(this.messageGeneral)
+                        this.splice(event, 1)
+                        // console.log("hello2")
+                        this.splice(event, 2)
                     })
                     // inputEle = document.createElement('input')
                     // inputEle.setAttribute('value', "HELLO")
                     // document.body.append(inputEle)
-                    this.splice(event, 1)
-                    console.log("hello2")
-                    this.splice(event, 2)
                 }
             }
         })
