--- a/index.html
+++ b/index.html
@@ -150,9 +150,11 @@
                         this.messageGeneral = snapshot.val().gen
                         this.messageSpecific = snapshot.val().spec
                         // console.log(this.messageGeneral)
+                    }).then(event => {
                         this.splice(event, 1)
                         // console.log("hello2")
                         this.splice(event, 2)
+
                     })
                     // inputEle = document.createElement('input')
                     // inputEle.setAttribute('value', "HELLO")
