--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </button>
         <div class="hashtagInput mb-3">
             <label for="genHashtags" class="form-label">General Hashtags</label>
-            <input id="genHashtags" type="text" :value="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags" class="form-control">
+            <input id="genHashtags" type="text" v-model="messageGeneral" v-on:keyup="splice($event, 1)" placeholder="General-use hashtags" class="form-control">
             <div class='hashtagDisplay'>
                 <a v-for="wordIndex in splitGeneral.length" class="hashtags" :style="{ 'background-color' : colorsGeneral[(wordIndex-1)%3]}" :href="'https://www.instagram.com/explore/tags/' + splitGeneral[wordIndex-1]">
                     #{{ splitGeneral[wordIndex-1] }}
@@ -144,19 +144,20 @@
                 },
                 loadWords: function(event){
                     // console.log("HELLO")
-                    firebase.database().ref(userId).on('value', function (snapshot) {
-                        // document.getElementById("genHashtags").value = snapshot.val().gen
-                        // document.getElementById("specHashtags").value = snapshot.val().spec
-                        this.messageGeneral = snapshot.val().gen
-                        this.messageSpecific = snapshot.val().spec
-                        // console.log(this.messageGeneral)
+                    const loadPromise = new Promise((resolve, reject) => {
+                        firebase.database().ref(userId).on('value', function (snapshot) {
+                            document.getElementById("genHashtags").value = snapshot.val().gen
+                            document.getElementById("specHashtags").value = snapshot.val().spec
+                            this.messageGeneral = snapshot.val().gen
+                            this.messageSpecific = snapshot.val().spec
+                            // console.log(this.messageGeneral)
+                        })
                     })
-                    // .then(event => {
-                    //     this.splice(event, 1)
-                    //     // console.log("hello2")
-                    //     this.splice(event, 2)
-
-                    // })
+                    loadPromise.then(event => {
+                        this.splice(event, 1)
+                        // console.log("hello2")
+                        this.splice(event, 2)
+                    })
                     // inputEle = document.createElement('input')
                     // inputEle.setAttribute('value', "HELLO")
                     // document.body.append(inputEle)
