--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                         })
                     })
                     loadPromise.then(() => {
+                        console.log(this.messageSpecific)
                         this.splice(event, 1)
-                        // console.log("hello2")
                         this.splice(event, 2)
                     })
                     // inputEle = document.createElement('input')
