--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             console.log(this.messageGeneral)
                         })
                     })
-                    loadPromise.then(() => {
+                    loadPromise.then(val => {
                         console.log(this.messageSpecific)
                         this.splice(event, 1)
                         this.splice(event, 2)
