--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                             this.messageSpecific = snapshot.val().spec
                             console.log(this.messageGeneral)
                             console.log("hell")
+                            resolve("Great!")
                         })
                     }).then(val => {
                         console.log(this.messageSpecific)
